Fixed - "Hidden groups are not showing in list as logged in member is already organizer for the hidden group"

--- a/src/bp-templates/bp-nouveau/readylaunch/css/login.css
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/login.css
@@ -241,10 +241,6 @@ a {
   text-decoration: none;
 }
 
-.hidden {
-  display: none;
-}
-
 .inline-block {
   display: inline-block;
 }
