--- a/src/bp-templates/bp-nouveau/readylaunch/css/sass/base/_normalize.scss
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/sass/base/_normalize.scss
@@ -68,10 +68,6 @@ a {
 }
 
 //  Utilities
-.hidden {
-	display: none;
-}
-
 .inline-block {
 	display: inline-block;
 }
